--- a/Single Page Application/css/style.css
+++ b/Single Page Application/css/style.css
@@ -34,7 +34,8 @@ body {
     width: 100%;
 }
 
-.nav-link ,.footerLogo{
+.nav-link,
+.footerLogo {
     cursor: pointer;
 }
 
@@ -95,6 +96,7 @@ body {
 
 .secondPage {
     padding: 4rem 0;
+    background: #f4f9ef;
 }
 
 .secondPage .my-card {
@@ -246,8 +248,12 @@ body {
 
 
 /* fourthpage */
+.fourthpage{
+    background: #f4f9ef;
+}
 .fourthpage p {
     text-align: justify;
+    
 }
 
 
