--- a/CRUD Operation in JS/css/style.css
+++ b/CRUD Operation in JS/css/style.css
@@ -1,29 +1,46 @@
 body {
-    background: aliceblue;
+    background: #3B7197;
 }
-.searchbar{
+
+.searchbar {
     display: flex;
     align-items: center;
     border: 1px solid black;
     padding: 5px 10px;
     border-radius: 5px;
-
+    background: rgb(255, 255, 255);
 }
-.searchbar input{
-    border:none;
+
+.searchbar input {
+    border: none;
     outline: none;
     margin-left: 10px;
     width: 90%;
+}
+.addProductSec .btn {
+    background: #74BDE0;
 }
 .addProductSec,
 .viewProductSection {
     background: rgb(255, 255, 255);
     border: 1px solid rgb(198, 198, 198);
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 54px 55px, rgba(255, 255, 255, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     border-radius: 5px;
+}
+
+.bi-arrow-down-up{
+    color: black;  
 }
 
 .viewProductSection {
     height: 70vh;
+}
+.viewProductSection h3{
+    color: #4A8DB7;
+}
+
+th{
+    color: #4A8DB7;
 }
 
 /* Hide the spin button in priceInput */
@@ -37,6 +54,7 @@ input::-webkit-inner-spin-button {
 
 .addProductSec .btn:hover {
     background: black;
+    color: #fff;
 }
 
 .viewProductSection .tbody {
@@ -44,7 +62,7 @@ input::-webkit-inner-spin-button {
     overflow-y: scroll;
 }
 
-.delBtn{
+.delBtn {
     /* opacity: 0; */
     display: none;
 }
@@ -54,7 +72,7 @@ tr:hover .delBtn {
 }
 
 
-#viewImage{
+#viewImage {
     height: 30%;
     display: flex;
     justify-content: center;
