--- a/Userlist UI/src/components/userList/userlist.css
+++ b/Userlist UI/src/components/userList/userlist.css
@@ -4,7 +4,7 @@
 }
 
 .userTable {
-    width: 80%;
+    width: 100%;
 }
 
 .textArea {
@@ -16,3 +16,9 @@
     width: 70%;
 }
 
+@media only screen   
+and (min-width: 950px)  {
+    .userTable{
+        width: 80%;
+    }
+}
